<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IncomingTabFragment"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:id="@+id/fragment_allcall_tab_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_16sdp"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="1dip"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:background="#9EB4B9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="All Call"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_all_call"
                        android:contentDescription="@string/incoming"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="No Calls"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <View
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="1dip"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:background="#9EB4B9" />



                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/fragment_allcall_tab_main_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:fillViewport="true"
                android:focusableInTouchMode="true"
                android:visibility="gone">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/fragment_allcall_tab_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_background"
                    app:queryHint="@string/search"
                    app:defaultQueryHint="@string/search"
                    app:iconifiedByDefault="false"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="#E7E7E7"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_allcall_tab_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>
